exports[`client > reducers > commuter generic reducer tests should handle add commuter 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lon": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "geocodeConfidence": 0.77,
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "siteId": "site-2",
    "state": "Made up state",
  },
}
`;

exports[`client > reducers > commuter generic reducer tests should handle delete commuter 1`] = `Object {}`;

exports[`client > reducers > commuter generic reducer tests should handle set commuter 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lon": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "geocodeConfidence": 0.77,
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "siteId": "site-2",
    "state": "Made up state",
  },
  "commuter-3": Object {
    "_id": "commuter-3",
    "address": "9876 ABC Ct",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.912314,
      "lon": -77.033994,
    },
    "country": "Made up land",
    "county": "Made up county",
    "name": "Sal A. Mander",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
}
`;

exports[`client > reducers > commuter generic reducer tests should handle set commuters 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lon": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "geocodeConfidence": 0.77,
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "siteId": "site-2",
    "state": "Made up state",
  },
}
`;
